[gd_scene load_steps=3 format=2]

[ext_resource path="res://SpritesBlocagem/Porta.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ChangeScenePorta.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 423.158
margin_top = 518.742
margin_right = 517.158
margin_bottom = 532.742
rect_scale = Vector2( 1.5, 1.5 )
text = "Busca palavras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 711.68
margin_top = 518.742
margin_right = 826.68
margin_bottom = 532.742
rect_scale = Vector2( 1.5, 1.5 )
text = "Quarto de costura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 1019.1
margin_top = 517.482
margin_right = 1142.1
margin_bottom = 548.482
rect_scale = Vector2( 1.5, 1.5 )
text = "Quarto montagens 
      das frases"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarMenu" type="Button" parent="."]
margin_left = 706.928
margin_top = 667.845
margin_right = 860.928
margin_bottom = 714.845
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortaBuscaPalavras" type="Button" parent="."]
margin_left = 395.628
margin_top = 170.99
margin_right = 907.628
margin_bottom = 980.99
rect_scale = Vector2( 0.35, 0.4 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortaQuartoCostura" type="Button" parent="."]
margin_left = 710.65
margin_top = 178.999
margin_right = 1222.65
margin_bottom = 988.999
rect_scale = Vector2( 0.35, 0.4 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortaQuartoMontagens" type="Button" parent="."]
margin_left = 1014.99
margin_top = 176.329
margin_right = 1527.0
margin_bottom = 986.33
rect_scale = Vector2( 0.35, 0.4 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VoltarMenu" to="." method="_on_VoltarMenu_pressed"]
[connection signal="pressed" from="PortaBuscaPalavras" to="." method="_on_PortaBuscaPalavras_pressed"]
[connection signal="pressed" from="PortaQuartoCostura" to="." method="_on_PortaQuartoCostura_pressed"]
[connection signal="pressed" from="PortaQuartoMontagens" to="." method="_on_PortaQuartoMontagens_pressed"]
